kuber/arrstack/sonarr/sonarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: arr-stack
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:4.0.8
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        volumeMounts:
        - name: sonarr-config
          mountPath: /config
        ports:
        - containerPort: 8989
      volumes:
      - name: sonarr-config
        persistentVolumeClaim:
          claimName: sonarr-config-pvc
