kuber/arrstack/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  selector:
    app: sonarr
  ports:
  - name: sonarr
    port: 8989
    targetPort: 8989
  - name: metrics
    port: 9708
    targetPort: 9708
