kuber/arrstack/sonarr/sonarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: arr-stack
spec:
  selector:
    app: sonarr
  ports:
  - port: 8989
    targetPort: 8989
