kuber/arrstack/sonarr/sonarr-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: arr-stack
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`sonarr.minikube.m1xxos.me`)
    kind: Rule
    services:
    - name: sonarr
      port: 8989
      sticky:
        cookie: {}
